extend test-env, fix classloading